# rtneural-trainer

./: .gitignore  AGENTS.md  CITATION.cff  PRODUCT.md  README.md  TODO.md  pnpm-lock.yaml  pyrightconfig.json
.github/workflows/: ci.yml  release-packaging.yml
app/: index.html  package.json  vite.config.ts
app/src/: App.tsx  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/lib/: api.ts
app/src/test/: tauri-ui-smoke.test.tsx
docs/: Audio-Capture-Guidelines.md  DSP-Plugin-Handoff-RTNeural-Loader.md  Implementation-Guide-RTNeural-Training-Desktop-App.md  Paper-RTNeural-WaveNet-DSP-Research.md  Peer-Review-RTNeural-WaveNet-DSP-Research.md  Research-Clean-Crunch-Rhythm-Capture-Baseline.md  Research-Compressor-Pedal-Capture.md  Research-NAM-Performance-And-WaveNet.md  Research-NAM-To-RTNeural-Conversion.md  Research-PANAMA-WaveNet-Active-Learning.md  Research-RTNeural-A2-Runtime-Feasibility.md  Research-RTNeural-Training-Desktop-App.md  Research-RTNeural-WaveNet-JUCE-Performance.md  Research-WaveNet-Amp-Simulation-Papers-2026-06-24.md
fixtures/rtneural-json/golden/: conv1d_bn_prelu.rtneural.json  conv1d_light.rtneural.json  conv1d_stack_prelu.rtneural.json  conv_gru_hybrid.rtneural.json  dense_only.rtneural.json  gru_light.rtneural.json  lstm_light.rtneural.json  lstm_standard.rtneural.json  wavenet_tcn.rtneural.json  wavenet_tcn_a2_prelu.rtneural.json  wavenet_tcn_balanced.rtneural.json  wavenet_tcn_balanced_tanh15.rtneural.json  wavenet_tcn_balanced_tanh18.rtneural.json  wavenet_tcn_clean.rtneural.json  wavenet_tcn_compressor.rtneural.json  wavenet_tcn_edge.rtneural.json  wavenet_tcn_edge_detail.rtneural.json  wavenet_tcn_fast.rtneural.json  wavenet_tcn_high_gain.rtneural.json  wavenet_tcn_quality.rtneural.json  wavenet_tcn_quality_tanh15.rtneural.json  wavenet_tcn_quality_tanh18.rtneural.json  wavenet_tcn_separable_fast.rtneural.json
native/rtneural-validator/: CMakeLists.txt
native/rtneural-validator/src/: main.cpp
paper/arxiv/: SUBMISSION.md  main.tex
plugin/rtneural-loader/: CMakeLists.txt  README.md
plugin/rtneural-loader/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build_rtneural_validators.py  collect_tauri_release_artifacts.py  compare_training_runs.py  generate_golden_rtneural_fixtures.py  generate_rtneural_keras_fixtures.py  package_tauri_sidecars.py  rtneural_support_matrix.py  search_rtneural_presets.py  smoke_keras_training_export.py  smoke_packaged_app.py  smoke_release_package.py  smoke_release_sidecars.py  smoke_rtneural_keras_layers.py  smoke_rtneural_validator.py  smoke_tauri_workflow.py
trainer/: pyproject.toml
trainer/rttrainer/: __init__.py  cli.py  utils.py
trainer/rttrainer/data/: audio_io.py  prepare.py
trainer/rttrainer/export_rtneural/: json_exporter.py  keras_exporter.py  parity.py  registry.py
trainer/rttrainer/metrics/: aliasing.py  audio_metrics.py
trainer/rttrainer/models/: presets.py
trainer/rttrainer/training/: dataset.py  device.py  runner.py
trainer/rttrainer/validation/: parity.py
trainer/tests/: test_audio_pipeline.py  test_rtneural_golden_fixtures.py  test_rtneural_parity.py  test_rtneural_registry.py  test_training_device.py  test_training_resume.py
