[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rttrainer"
version = "0.1.0"
description = "Training sidecar contract for RTNeural Trainer"
requires-python = ">=3.11,<3.13"
dependencies = []

[project.optional-dependencies]
training = ["numpy>=2.0", "torch>=2.5"]
tensorflow = [
    "numpy>=2.0",
    "tensorflow>=2.16,<2.19",
    "tensorflow-metal>=1.2 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
]

[project.scripts]
rttrainer = "rttrainer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rttrainer*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
