[package]
name = "rtneural-trainer"
version = "0.1.0"
description = "Local RTNeural model training workbench"
authors = ["Shortwav Labs"]
edition = "2021"

[lib]
name = "rtneural_trainer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
